style: added try catch blocks and adjusted some return statements in ItemController and ItemService